--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/head.css">
-    
     <title>Group935</title>
 </head>
 <body>
     <img class="bg" src="pics/bg.jpg" alt="">
     <header>
         <h1 class="headings main-heading">Group 935</h1>
-        <p></p>
     </header>
-    
+    <p class="big">Element 115 was very dangerous. It was found and taken from an asteroid in  Tunguska. Dr. Maxis and Richtofen were experimenting with element 115 at Der rise. One of the experiments was to bring the dead back to life. This experiment when horribly wrong and the zombies went on a rampage. Ricktofin, Dempsey, Takeo, and  Nikoli now have to fight their way through time to restore the world to before the apocalypse.  
+    </p>
     <div class="pic-flex">
         <div>
             <a href="dempsy/demsy.html">
