--- a/rick/rick.html
+++ b/rick/rick.html
@@ -11,43 +11,51 @@
 
     
     <div class="row">
-        <div class="column" >
+        <div>
             <!--Column 1 -->
-            <p>die</p>
-            <audio controls>
-                <source src="rick audio/yeah-yeah-die.mp3" type="audio/mpeg">
-            </audio>
-            <p>Thank you</p>
-            <audio controls>
-                <source src="rick audio/thank-you.mp3" type="audio/mpeg">
-            </audio>
-            <p>his head is gone</p>
-    <audio controls>
-        <source src="rick audio/yeah-hes-had-this-car.mp3" type="audio/mpeg">
-    </audio>
-    <p>pain the floor with blood</p>
-    <audio controls>
-       <source src="rick audio/ive-been-paint-the-floor-with-her-blood.mp3" type="audio/mpeg">
-    </audio>
-        </div>
-        <div class="column">    
+            <div>
+                <p>die</p>
+                <audio controls>
+                    <source src="rick audio/yeah-yeah-die.mp3" type="audio/mpeg">
+                </audio>
+            </div>
+            <div>
+                <p>Thank you</p>
+                <audio controls>
+                    <source src="rick audio/thank-you.mp3" type="audio/mpeg">
+                </audio>
+            </div>
+            <div>
+                <p>his head is gone</p>
+                <audio controls>
+                    <source src="rick audio/yeah-hes-had-this-car.mp3" type="audio/mpeg">
+                </audio>
+            </div>
+            <div>
+                <p>pain the floor with blood</p>
+                <audio controls>
+                <source src="rick audio/ive-been-paint-the-floor-with-her-blood.mp3" type="audio/mpeg">
+                </audio>
+            </div>
+                </div>
+        <div>    
              <!-- Column 2 -->
                 <p>stop talking to me</p>
             <audio controls>
                 <source src="rick audio/stop-talking-to-maine.mp3" type="audio/mpeg">
             </audio>
             <p>dempsy sucks</p>
-    <audio controls>
-        <source src="rick audio/two-two-two.mp3" type="audio/mpeg">
-    </audio>    
-    <p>head explodes</p>
-    <audio controls>
-        <source src="rick audio/i-love-then-your-head-explodes.mp3" type="audio/mpeg">
-     </audio>
-     <p>body parts</p>
-     <audio controls>
-        <source src="rick audio/oh-heres-all-over-the-place-now.mp3" type="audio/mpeg">
-     </audio>
+            <audio controls>
+                <source src="rick audio/two-two-two.mp3" type="audio/mpeg">
+            </audio>    
+            <p>head explodes</p>
+            <audio controls>
+                <source src="rick audio/i-love-then-your-head-explodes.mp3" type="audio/mpeg">
+            </audio>
+            <p>body parts</p>
+            <audio controls>
+                <source src="rick audio/oh-heres-all-over-the-place-now.mp3" type="audio/mpeg">
+            </audio>
         </div>
       </div>
 
