added contact form

--- a/dempsy/demsy.html
+++ b/dempsy/demsy.html
@@ -21,7 +21,11 @@
     </audio>
     <h1>facts about </h1>
     <ul>
-        <li></li>
+        <li>age: late 40's</li>
+        <li>height: 5'11"</li>
+        <li>favorite guns: the bar, MG42 and HK21 .</li>
+        <li>often calls the Wunderwaffe DG-2 the “Wonder Waffle</li>
+        <li>dose not like ricktofin</li>    
     </ul>
-    <video src="Dempsy.mp4"></video>
+    
 </body>
