--- a/nikolai/nikolai.html
+++ b/nikolai/nikolai.html
@@ -58,5 +58,12 @@
     </audio>
         </div>
     </div>
-    <h1>facts about </h1>
+    <h1>facts about me</h1>
+    <ul>
+        <li>Loves vodka</li>
+        <li>Favorite guns are  PPSh-41, FN FAL and H115 Oscillator</li>
+        <li>6'1" (185cm)</li>
+        <li>225lb (102kg)</li>
+        <li>Dose not like Takeo</li>
+    </ul>
 </body>
