--- a/rick/rick.html
+++ b/rick/rick.html
@@ -39,7 +39,7 @@
             </div>
                 </div>
         <div>    
-             <!-- Column 2 -->
+            <!-- Column 2 -->
                 <p>stop talking to me</p>
             <audio controls>
                 <source src="rick audio/stop-talking-to-maine.mp3" type="audio/mpeg">
@@ -57,10 +57,14 @@
                 <source src="rick audio/oh-heres-all-over-the-place-now.mp3" type="audio/mpeg">
             </audio>
         </div>
-      </div>
+    </div>
 
     <h1>facts about </h1>
     <ul>
-        <li></li>
+        <li>The creator of the Wunderwaffe DG-2</li>
+        <li>Help make the giant robots</li>
+        <li>Age 34</li>
+        <li>Height: 5'10" (178cm)</li>
+        <li>Weight: 184lb (83kg)</li>
     </ul>
 </body>
