--- a/takeo/takeo.html
+++ b/takeo/takeo.html
@@ -20,5 +20,8 @@
         <source src="audio/K TO THE I TO THE A ZOMBITCH (2).mp3" type="audio/mpeg">
     </audio>
     <h1>facts about </h1>
-    <h1></h1>
+    <ul>
+        <li> height 6´7" (200cm) </li>
+        <li> 264 lbs(120 kg) </li>
+    </ul>
 </body>
