added a border and fixed things

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,44 +9,52 @@
     <link rel="stylesheet" href="styles/head.css">
     <title>Group935</title>
 </head>
+
 <body>
     <img class="bg" src="pics/bg.jpg" alt="">
     <header>
         <h1 class="headings main-heading">Group 935</h1>
     </header>
-    <p class="big">Element 115 was very dangerous. It was found and taken from an asteroid in  Tunguska. Dr. Maxis and Richtofen were experimenting with element 115 at Der rise. One of the experiments was to bring the dead back to life. This experiment when horribly wrong and the zombies went on a rampage. Ricktofin, Dempsey, Takeo, and  Nikoli now have to fight their way through time to restore the world to before the apocalypse.  
+    <p class="big">Element 115 was very dangerous. It was found and taken from an asteroid in Tunguska. Dr. Maxis and
+        Richtofen were experimenting with element 115 at Der rise. One of the experiments was to bring the dead back to
+        life. This experiment when horribly wrong and the zombies went on a rampage. Ricktofin, Dempsey, Takeo, and
+        Nikoli now have to fight their way through time to restore the world to before the apocalypse.
     </p>
 
 
     <div class="pic-flex">
         <div>
-            <a href="dempsy/demsy.html">
-            <img src=".//pics/demsy2.jfif" alt="Demsy" width="400px" class="center, img1">
+            <a href="dempsy/demsy.html"  target="_blank">
+                <img src=".//pics/demsy2.jfif" alt="Demsy" width="400px" class="center, img1">
                 <img src="pics/demsy.jfif" alt="" class="img2">
                 <p>demsy</p>
             </a>
-       </div> 
+        </div>
         <div>
-            <a href="rick/rick.html">
-                <img src="pics/Richtofen2.png" alt="Demsy" width="400px" class="center, img1"> 
+            <a href="rick/rick.html"  target="_blank">
+                <img src="pics/Richtofen2.png" alt="Demsy" width="400px" class="center, img1">
                 <img src="pics/rick.jfif" alt="" class="img2">
                 <p>richtofen</p>
             </a>
         </div>
         <div>
-            <a href="takeo/takeo.html">
+            <a href="takeo/takeo.html"  target="_blank">
                 <img src="pics/takeo2.jpg" alt="Demsy" width="400px" class="center, img1">
                 <img src="pics/takeo.jfif" alt="" class="img2">
                 <p>takeo</p>
             </a>
         </div>
         <div>
-            <a href="nikolai/nikolai.html">
+            <a href="nikolai/nikolai.html" target="_blank">
                 <img src="pics/Nikolai2.png" alt="Demsy" width="400px" class="center img1">
                 <img src="pics/nikolai.jfif" alt="" class="img2">
                 <p>nikolai</p>
             </a>
         </div>
-    </div> 
+    </div>
+    <a href="contact/contact.html" target="_blank">
+        <h1>Contact me</h1>
+    </a>
 </body>
+
 </html>
