--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
             </a>
         </div>
     </div>
-    <a href="contact/contact.html" target="_blank">
-        <h1>Contact me</h1>
-    </a>
+    <div>
+        <a href="contact/contact.html" target="_blank">
+            <h1 class="contacts">Contact me</h1>
+        </a>
+    </div>
+    
 </body>
 
 </html>
