--- a/takeo/takeo.html
+++ b/takeo/takeo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="./styles/head.css">
-    <title>demsy</title>
+   <link rel="stylesheet" href="takeo.css">
+    <title>Takeo</title>
 </head>
 <body>
     <h1 class="headings life" >Life before the apocalypse</h1>
@@ -14,14 +14,28 @@
         <source src="audio/K TO THE I TO THE A ZOMBITCH (2).mp3" type="audio/mpeg">
     </audio>
     <audio controls>
-        <source src="audio/K TO THE I TO THE A ZOMBITCH (2).mp3" type="audio/mpeg">
+        <source src="audio/K TO THE I TO THE A ZOMBITCH (2).mp3" type="audio/mpeg" id="black">
     </audio>
     <audio controls>
         <source src="audio/K TO THE I TO THE A ZOMBITCH (2).mp3" type="audio/mpeg">
     </audio>
-    <h1>facts about </h1>
-    <ul>
-        <li> height 6´7" (200cm) </li>
-        <li> 264 lbs(120 kg) </li>
-    </ul>
+    <h1>facts about Takeo</h1>
 </body>
+<table>
+    <tr>
+        <th>Height:</th>
+        <th>5'9" (175cm)</th>
+    </tr>
+    <tr>
+        <th>wehight:</th>
+        <th>N/A</th>
+    </tr>
+    <tr>
+        <th>age:</th>
+        <th>Late 50s to Early 60s</th>
+    </tr>
+        <th>favorite guns:</th>
+        <th>N/A</th>
+    <tr>
+    </tr>
+</table>
