--- a/contact/contact.html
+++ b/contact/contact.html
@@ -1,51 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="contact.css">
     <title>Contact me</title>
 </head>
+
 <body>
     <h1>Contact Information</h1>
 
     <div class="contact">
         <form>
             <div>
-<labe for="fname">First name:</labe><br>
-<input type="text" id="fname" name="name"><br>
-<labe for="lname">Last name:</labe><br>
-<input type="text" id="lname" name="name"><br>
-<labe for="email">Email:</labe><br>
-<input type="email" id="email" name="name"><br><br>
-<!--gender there are only 2-->
-<fieldset id="gender">
-    <legend>what is your gender</legend>
-    <input type="radio" id="male" name="gender">
-    <label for="male">Male</label><br>
-    
-    <input type="radio" id="female" name="gender">
-    <label for="female">Female</label><br><br>
-</fieldset>
-<!--Input for names-->
-<fieldset id="play">
-    <legend>who is your favorite charecter</legend>
-    <div class="flex-people">
-        <fieldset id="people">
-            <input type="radio" id="rick" name="ppl">
-            <label for="rick">ricktofin</label>
-            <input type="radio" id="dem" name="ppl">
-            <label for="dem">dempsy</label>
-            <input type="radio" id="nick" name="ppl">
-            <label for="nick">nikoali</label>
-            <input type="radio" id="takeo" name="ppl">
-            <label for="takeo">takeo</label>
-        </fieldset>
-    </div>
-</fieldset>
-</div>
+                <labe for="fname">First name:</labe><br>
+                <input placeholder="first name" type="text" id="fname" name="name"><br>
+                <labe  for="lname">Last name:</labe><br>
+                <input placeholder="lastname" type="text" id="lname" name="name"><br>
+                <labe for="email">Email:</labe><br>
+                <input placeholder="Email" type="email" id="email" name="name"><br><br>
+                <!--gender there are only 2-->
+                <div class="flex">
+                     <fieldset id="gender">
+                    <legend>what is your gender</legend>
+                    <input type="radio" id="male" name="gender">
+                    <label for="male">Male</label>
 
-<input type="submit" value="submit">
+                    <input type="radio" id="female" name="gender">
+                    <label for="female">Female</label>
+                </fieldset>
+                </div><br><br>
+
+                <!--Input for names-->
+                <div class="flex">
+                    <fieldset id="play">
+                        <legend>who is your favorite charecter</legend>
+                        <div class="flex-people">
+                                <input type="radio" id="rick" name="ppl">
+                                <label for="rick">ricktofin</label>
+                                <input type="radio" id="dem" name="ppl">
+                                <label for="dem">dempsy</label>
+                                <input type="radio" id="nick" name="ppl">
+                                <label for="nick">nikoali</label>
+                                <input type="radio" id="takeo" name="ppl">
+                                <label for="takeo">takeo</label>
+                        </div>
+                    </fieldset>
+                </div>
+
+            </div>
+
+            <button>Send</button>
         </form>
     </div>
-    
+
 </body>
+
 </html>
