--- a/takeo/takeo.html
+++ b/takeo/takeo.html
@@ -4,6 +4,7 @@
     <title>Takeo</title>
 </head>
 <body>
+    <img src="zombie.jfif" alt="" class="bg">
     <h1 class="headings life" >Life before the apocalypse</h1>
     <p></p>
     <h1>sayings</h1>
