fixed tabble shit

--- a/rick/rick.html
+++ b/rick/rick.html
@@ -5,6 +5,7 @@
     <title>ricktofin</title>
 </head>
 <body>
+    
     <h1 class="headings life" >Life before the apocalypse</h1>
     <h1>sayings</h1>
 
@@ -60,11 +61,22 @@
     </div>
 
     <h1>facts about </h1>
-    <ul>
-        <li>The creator of the Wunderwaffe DG-2</li>
-        <li>Help make the giant robots</li>
-        <li>Age 34</li>
-        <li>Height: 5'10" (178cm)</li>
-        <li>Weight: 184lb (83kg)</li>
-    </ul>
+    <table>
+        <tr>
+            <th>Height:</th>
+            <th>5'9" (175cm)</th>
+        </tr>
+        <tr>
+            <th>wehight:</th>
+            <th>N/A</th>
+        </tr>
+        <tr>
+            <th>age:</th>
+            <th>Late 50s to Early 60s</th>
+        </tr>
+        <th>favorite guns:</th>
+        <th>N/A</th>
+        <tr>
+        </tr>
+    </table>
 </body>
