fixed the rest if the isues

--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
 
     <div class="pic-flex">
         <div>
-            <a href="dempsy/demsy.html"  target="_blank">
+            <a href="dempsy/demsy.html"  target="">
                 <img src=".//pics/demsy2.jfif" alt="Demsy" width="400px" class="center, img1">
                 <img src="pics/demsy.jfif" alt="" class="img2">
                 <p>demsy</p>
             </a>
         </div>
         <div>
-            <a href="rick/rick.html"  target="_blank">
+            <a href="rick/rick.html"  target="">
                 <img src="pics/Richtofen2.png" alt="Demsy" width="400px" class="center, img1">
                 <img src="pics/rick.jfif" alt="" class="img2">
                 <p>richtofen</p>
             </a>
         </div>
         <div>
-            <a href="takeo/takeo.html"  target="_blank">
+            <a href="takeo/takeo.html"  target="">
                 <img src="pics/takeo2.jpg" alt="Demsy" width="400px" class="center, img1">
                 <img src="pics/takeo.jfif" alt="" class="img2">
                 <p>takeo</p>
             </a>
         </div>
         <div>
-            <a href="nikolai/nikolai.html" target="_blank">
+            <a href="nikolai/nikolai.html" target="">
                 <img src="pics/Nikolai2.png" alt="Demsy" width="400px" class="center img1">
                 <img src="pics/nikolai.jfif" alt="" class="img2">
                 <p>nikolai</p>
@@ -53,7 +53,7 @@
         </div>
     </div>
     <div>
-        <a href="contact/contact.html" target="_blank">
+        <a href="contact/contact.html" target="">
             <h1 class="contacts">Contact me</h1>
         </a>
     </div>
