--- a/nikolai/nikolai.html
+++ b/nikolai/nikolai.html
@@ -9,8 +9,7 @@
     <h1>sayings</h1>
     
     <div class="row">
-        <div class="column" >
-            <h2>Column 1</h2>
+        <div class="column">
             <p>dead now</p>
             <audio controls>
                 <source src="nikolai-audio/dead-now.mp3" type="audio/mpeg">
@@ -33,7 +32,6 @@
             </audio>
         </div>
         <div class="column" >
-            <h2>Column 2</h2>
             
             <p>die russian</p>
             <audio controls>
@@ -59,11 +57,23 @@
         </div>
     </div>
     <h1>facts about me</h1>
-    <ul>
-        <li>Loves vodka</li>
-        <li>Favorite guns are  PPSh-41, FN FAL and H115 Oscillator</li>
-        <li>6'1" (185cm)</li>
-        <li>225lb (102kg)</li>
-        <li>Dose not like Takeo</li>
-    </ul>
+        <h1>facts about Takeo</h1>
+    <table>
+        <tr>
+            <th>Height:</th>
+            <th>5'9" (175cm)</th>
+        </tr>
+        <tr>
+            <th>wehight:</th>
+            <th>N/A</th>
+        </tr>
+        <tr>
+            <th>age:</th>
+            <th>Late 50s to Early 60s</th>
+        </tr>
+            <th>favorite guns:</th>
+            <th>N/A</th>
+        <tr>
+        </tr>
+    </table>
 </body>
