--- a/dempsy/demsy.html
+++ b/dempsy/demsy.html
@@ -19,13 +19,24 @@
     <audio controls>
         <source src="audio/K TO THE I TO THE A ZOMBITCH (2).mp3" type="audio/mpeg">
     </audio>
-    <h1>facts about </h1>
-    <ul>
-        <li>age: late 40's</li>
-        <li>height: 5'11"</li>
-        <li>favorite guns: the bar, MG42 and HK21 .</li>
-        <li>often calls the Wunderwaffe DG-2 the “Wonder Waffle</li>
-        <li>dose not like ricktofin</li>    
-    </ul>
+    <h1>facts about Dempsy</h1>
+    <table>
+        <tr>
+            <th>Height:</th>
+            <th>5'9" (175cm)</th>
+        </tr>
+        <tr>
+            <th>wehight:</th>
+            <th>N/A</th>
+        </tr>
+        <tr>
+            <th>age:</th>
+            <th>Late 50s to Early 60s</th>
+        </tr>
+        <th>favorite guns:</th>
+        <th>N/A</th>
+        <tr>
+        </tr>
+    </table>
     
 </body>
