added a link to the wiki

--- a/dempsy/demsy.html
+++ b/dempsy/demsy.html
@@ -37,6 +37,7 @@
         <th>N/A</th>
         <tr>
         </tr>
+        <a href="https://callofduty.fandom.com/wiki/%22Tank%22_Dempsey">More about Dempsy</a>
     </table>
     
 </body>
