added links to the cod wiki

--- a/dempsy/demsy.html
+++ b/dempsy/demsy.html
@@ -38,5 +38,6 @@
         <tr>
         </tr>
     </table>
+        <a href="https://callofduty.fandom.com/wiki/%22Tank%22_Dempsey">More about Dempsy</a>
     
 </body>
