--- a/nikolai/nikolai.html
+++ b/nikolai/nikolai.html
@@ -76,4 +76,5 @@
         <tr>
         </tr>
     </table>
+    <a href="https://callofduty.fandom.com/wiki/Nikolai_Belinski">More about Nikolai</a>
 </body>
