--- a/rick/rick.html
+++ b/rick/rick.html
@@ -79,4 +79,5 @@
         <tr>
         </tr>
     </table>
+    <a href="https://callofduty.fandom.com/wiki/Edward_Richtofen">More about Ricktofin</a>
 </body>
