--- a/takeo/takeo.html
+++ b/takeo/takeo.html
@@ -38,4 +38,5 @@
         <tr>
         </tr>
     </table>
+    <a href="https://callofduty.fandom.com/wiki/Takeo_Masaki">More about Ricktofin</a>
 </body>
