--- a/rick/rick.html
+++ b/rick/rick.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="./styles/head.css">
+    <link rel="stylesheet" href="styles/head.css">
     <link rel="stylesheet" href="rick styles/rick.css">
     <title>ricktofin</title>
 </head>
