--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="pic-flex">
         <div>
             <a href="dempsy/demsy.html"  target="">
-                <img src=".//pics/demsy2.jfif" alt="Demsy" width="400px" class="center, img1">
+                <img src="./pics/demsy2.jfif" alt="Demsy" width="400px" class="center, img1">
                 <img src="pics/demsy.jfif" alt="" class="img2">
                 <p>demsy</p>
             </a>
